Fixed issue on mobile when the browser bar was hidden, the riseze of the images was visible for a second

--- a/bookshelf/src/assets/styles/common/header.css
+++ b/bookshelf/src/assets/styles/common/header.css
@@ -47,7 +47,7 @@ html {
 /* 3. HTML tags selectors */
 
 header {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.95);
     align-items: center;
     height: 8vh;
     min-height: 70px;
