--- a/bookshelf/src/assets/styles/home/startToday.css
+++ b/bookshelf/src/assets/styles/home/startToday.css
@@ -15,12 +15,24 @@
     width: 100%;
 }
 
-#section2 .arrow-container {
-    top: 80%;
+#section2-background .arrow-container {
+    margin-top: 45vh;
 }
 
-#section2 {
+#section2-background {
     background-image: url("../../images/home/section2.png");
+    background-blend-mode: multiply;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#section2-background .arrow-container {
+    margin-left: 48.7%;
+    margin-top: 46vh;
 }
 
 #section2-content {
